--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,1 @@
-# Reddit API - Create app at https://www.reddit.com/prefs/apps
-REDDIT_CLIENT_ID=your_client_id
-REDDIT_CLIENT_SECRET=your_client_secret
-REDDIT_USER_AGENT=MaximusSports/1.0
+# No API keys required for Google News — team headlines use free RSS feeds.
