--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
+    "fetch-logos": "node scripts/fetch-logos.js",
     "lint": "eslint .",
     "preview": "vite preview"
   },
