Add Odds API integration and ATS insight

--- a/.env.example
+++ b/.env.example
@@ -1,1 +1,4 @@
-# No API keys required for Google News — team headlines use free RSS feeds.
+# Google News — team headlines use free RSS feeds (no key needed).
+
+# Optional: The Odds API (https://the-odds-api.com/) for live spreads, totals, moneyline
+ODDS_API_KEY=
